<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedicalRep</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="textView_userName">User name</string>
    <string name="textView_password">Password</string>
    <string name="userName">User name</string>
    <string name="edit_userName">User name</string>
    <string name="password">Password</string>
    <string name="edit_password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_as_Manufaturer">Sign up as Manufacturer</string>
    <string name="sign_up_as_Pharmacy">Sign up as Pharmacy</string>
    <string name="button_sign_in">Sign in</string>
    <string name="title_activity_sign_up_as_manufacturer">SignUp As Manufacturer</string>
    <string name="title_activity_sign_up_pharmacy">SignUp As Pharmacist</string>
    <string name="telephone">Telephone no</string>
    <string name="address">Address</string>
    <string name="retype_password">Retype password</string>
    <string name="company_name">Company name</string>
    <string name="manufacturer_name_">Manufacturer name :</string>
    <string name="titleM">Sign up as Manufacturer</string>
    <string name="e_mail">E-Mail</string>
    <string name="pharmacy_name">Pharmacy name</string>
    <string name="titleP">Sign up as Pharmacy</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pharmacist">Pharmacist</string>
    <string name="title_activity_manufacturer">Manufacturer</string>
    <string name="edit_detail">Edit Detail</string>
    <string name="update_product">Update Products</string>
    <string name="view_orders">View Orders</string>
    <string name="order_product">Order Products</string>
    <string name="title_activity_product_update">Updating Products</string>
    <string name="title_activity_edit_pharmacist_detail">Pharmacist</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_edit_manufacturer_detail">Manufacturer</string>
    <string name="title_activity_add_new_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="description">Description</string>
    <string name="result"></string>
    <string name="title_activity_manufacturer_orders">Orders</string>
    <string name="title_activity_pharmay_orders">Orders</string>
    <string name="title_activity_ordering_products">Order For Product</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="logout">Log out</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="title_activity_edit_product_detail">Edit Product Detail</string>
    <string name="title_activity_accept_order">Accept Order</string>
    <string name="order_id">Order Id :</string>
    <string name="pharmacy_name_">Pharmacy name :</string>
    <string name="product_name_">Product Name :</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="quantity_">Quantity :</string>
    <string name="state">Order state</string>
    <string name="title_activity_view_order">View Order</string>
    <string name="change_password">Change password</string>
    <string name="title_activity_change_password">Change Your Password</string>
    <string name="user_name">User name</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype Password</string>
    <string name="change">Change</string>
    <string name="title_activity_deactivate_account">Account Deactivation</string>
    <string name="deactivation_msg">If you deactivate your account you can not use this MedicalRep pharmacy product Ordering app here after. Do you really want to deactivate your account?</string>
    <string name="deactivate">Deactivate</string>
    <string name="deactivate_account">Deactivate Account</string>
</resources>
