<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
android:scrollbars="none" >

<LinearLayout android:layout_width="match_parent"
android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.medicalrep.AddNewProduct" >

    <TextView
        android:id="@+id/tv_companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:textColor="#425fb2"
        android:text="@string/company_name"
        android:textAppearance="?android:attr/textAppearanceMedium"  />

    <TextView
        android:id="@+id/tv_productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_companyName"
        android:layout_marginTop="27dp"
        android:text="@string/product_name" />
	<requestFocus />

    <EditText
        android:id="@+id/et_productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_productName"
        android:layout_alignBottom="@+id/tv_productName"
        android:layout_toRightOf="@+id/tv_productName"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_unitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_productName"
        android:layout_below="@+id/et_productName"
        android:layout_marginTop="30dp"
        android:text="@string/unit_price" />

    <EditText
        android:id="@+id/et_unitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_unitPrice"
        android:layout_alignBottom="@+id/tv_unitPrice"
        android:layout_alignLeft="@+id/et_productName"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_unitPrice"
        android:layout_below="@+id/et_unitPrice"
        android:layout_marginTop="33dp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_description"
        android:layout_alignBottom="@+id/tv_description"
        android:layout_toRightOf="@+id/tv_productName"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_save"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@+id/tv_description"
        android:text="@string/result"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/bt_cancel"
        style="@style/btnStyleBeige"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_description"
        android:layout_marginTop="30dp"
        android:onClick="cancel"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/bt_save"
        style="@style/btnStyleBeige"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_cancel"
        android:layout_alignBottom="@+id/bt_cancel"
        android:layout_toLeftOf="@+id/bt_cancel"
        android:onClick="addNewProduct"
        android:text="@string/save" />

</RelativeLayout>
</LinearLayout>
</ScrollView>