<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
android:scrollbars="none" xmlns:app="http://schemas.android.com/tools">

<LinearLayout android:layout_width="match_parent"
android:layout_height="match_parent">

    <AbsoluteLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:context="com.example.medicalrep.SignUpAsPharmacistActivity"
        app:ignore="MergeRootFrame"
        app:listitem="@android:layout/simple_expandable_list_item_2" >

        <TextView
            android:id="@+id/textView_pharmacyname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dp"
            android:layout_y="50dp"
            android:text="@string/pharmacy_name" />

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dp"
            android:layout_y="100dp"
            android:text="@string/userName" />

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dp"
            android:layout_y="150dp"
            android:text="@string/password" />

        <TextView
            android:id="@+id/textView_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dp"
            android:layout_y="200dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/textView_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dp"
            android:layout_y="250dp"
            android:text="@string/telephone" />

        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="20dp"
            android:layout_y="300dp"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/edit_pharmacyname"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_x="150dp"
            android:layout_y="40dp"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_x="150dp"
            android:layout_y="90dp"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_x="150dp"
            android:layout_y="140dp"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_adress"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_x="150dp"
            android:layout_y="190dp"
            android:ems="10"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/edit_telephone"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_x="150dp"
            android:layout_y="240dp"
            android:ems="10"
            android:inputType="phone" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_x="150dp"
            android:layout_y="290dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/button_signup"
            style="@style/btnStyleBeige"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_x="198dp"
            android:layout_y="346dp"
            android:onClick="signup"
            android:text="@string/sign_up" />
    </AbsoluteLayout>

</LinearLayout>
</ScrollView>