<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
android:scrollbars="none" xmlns:app="http://schemas.android.com/tools">

<LinearLayout android:layout_width="match_parent"
android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:context="com.example.medicalrep.MainActivity" >

        <TextView
            android:id="@+id/textView_signupPharmacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_signupManufacturer"
            android:layout_below="@+id/textView_signupManufacturer"
            android:layout_marginTop="18dp"
            android:clickable="true"
            android:onClick="signupPharmacy"
            android:text="@string/sign_up_as_Pharmacy"
            android:textColor="#87b829" />

        <TextView
            android:id="@+id/textView_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_userName"
            android:layout_below="@+id/edit_userName"
            android:text="@string/password" />

        <TextView
            android:id="@+id/textView_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_userName"
            android:layout_below="@+id/textView_signin"
            android:text="@string/userName" />

        <EditText
            android:id="@+id/edit_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView_signin"
            android:layout_below="@+id/textView_userName"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_password"
            android:layout_below="@+id/textView_password"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView_signupManufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_password"
            android:layout_below="@+id/textView_signup"
            android:layout_marginTop="19dp"
            android:clickable="true"
            android:onClick="signupManufacturer"
            android:text="@string/sign_up_as_Manufaturer"
            android:textColor="#87b829" />

        <TextView
            android:id="@+id/textView_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="38dp"
            android:layout_marginTop="38dp"
            android:text="@string/sign_in"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#425fb2" />

        <Button
            android:id="@+id/button_signin"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignRight="@+id/edit_password"
            android:layout_below="@+id/edit_password"
            android:layout_marginTop="14dp"
            android:layout_toRightOf="@+id/textView_signupPharmacy"
            android:onClick="signin"
            android:text="@string/button_sign_in" />

        <TextView
            android:id="@+id/textView_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_signin"
            android:layout_below="@+id/button_signin"
            android:layout_marginTop="29dp"
            android:text="@string/sign_up"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#425fb2" />
    </RelativeLayout>

</LinearLayout>
</ScrollView>