<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
android:scrollbars="none" >

<LinearLayout android:layout_width="match_parent"
android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/tv_orderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/order_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_setOrderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_orderId"
            android:layout_alignBottom="@+id/tv_orderId"
            android:layout_marginLeft="26dp"
            android:layout_toRightOf="@+id/tv_orderId"
            android:text="setOrderId" />

        <TextView
            android:id="@+id/tv_pharmacyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_orderId"
            android:layout_below="@+id/tv_orderId"
            android:layout_marginTop="18dp"
            android:text="@string/pharmacy_name_"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_setQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_quantity"
            android:layout_alignBottom="@+id/tv_quantity"
            android:layout_alignLeft="@+id/tv_setOrderId"
            android:text="setQuantity" />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_productName"
            android:layout_below="@+id/tv_setProductName"
            android:layout_marginTop="29dp"
            android:text="@string/quantity_"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_pharmacyName"
            android:layout_below="@+id/tv_setPharmacyName"
            android:layout_marginTop="24dp"
            android:text="@string/product_name_"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_setPharmacyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_pharmacyName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="setPharmacyName" />

        <TextView
            android:id="@+id/tv_setProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_productName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="setProductName" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_quantity"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="@string/state"
            android:textColor="#2d226f" />

        <Button
            android:id="@+id/bt_cancel"
            style="@style/btnStyleBeige"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_state"
            android:layout_marginTop="28dp"
            android:onClick="cancel"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/bt_reject"
            style="@style/btnStyleBeige"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/bt_cancel"
            android:layout_alignBottom="@+id/bt_cancel"
            android:layout_toLeftOf="@+id/bt_cancel"
            android:onClick="rejectOrder"
            android:text="@string/reject" />

        <Button
            android:id="@+id/bt_accept"
            style="@style/btnStyleBeige"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/bt_reject"
            android:layout_alignBottom="@+id/bt_reject"
            android:layout_toLeftOf="@+id/bt_reject"
            android:onClick="acceptOrder"
            android:text="@string/accept" />

    </RelativeLayout>

</LinearLayout>
</ScrollView>