<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/ScrollView01"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
android:scrollbars="none" xmlns:app="http://schemas.android.com/tools">

<LinearLayout android:layout_width="match_parent"
android:layout_height="match_parent">

    <AbsoluteLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:context="com.example.medicalrep.ChangePassword"
        app:ignore="MergeRootFrame"
        app:listitem="@android:layout/simple_expandable_list_item_2" >

        <TextView
            android:id="@+id/tv_setUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="150dp"
            android:layout_y="100dp"
            android:text="set user name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_oldPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_x="150dp"
            android:layout_y="150dp"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_newPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_x="150dp"
            android:layout_y="200dp"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_retypePassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_x="150dp"
            android:layout_y="250dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_change"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="110dp"
            android:layout_y="300dp"
            android:onClick="changePassword"
            android:text="@string/change" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="10dp"
            android:layout_y="100dp"
            android:text="@string/user_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_retypeNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="10dp"
            android:layout_y="250dp"
            android:text="@string/retype_new_password" />

        <TextView
            android:id="@+id/tv_newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="10dp"
            android:layout_y="200dp"
            android:text="@string/new_password" />

        <TextView
            android:id="@+id/tv_oldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="10dp"
            android:layout_y="150dp"
            android:text="@string/old_password" />

        <Button
            android:id="@+id/bt_cancel"
            style="@style/btnStyleBeige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="203dp"
            android:layout_y="299dp"
            android:onClick="cancel"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/tv_companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="84dp"
            android:layout_y="27dp"
            android:text="Company name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </AbsoluteLayout>

</LinearLayout>
</ScrollView>