<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.medicalrep.DeactivateAccount" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:text="@string/deactivation_msg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bt_cancel"
        style="@style/btnStyleBeige"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="69dp"
        android:onClick="cancel"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/bt_deactivate"
        style="@style/btnStyleBeige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt_cancel"
        android:layout_alignBottom="@+id/bt_cancel"
        android:layout_toLeftOf="@+id/bt_cancel"
        android:onClick="deactivateAccount"
        android:text="@string/deactivate" />

</RelativeLayout>
